@@ -126,6 +126,7 @@ image::release-notes-diagrams-export-as-png.png[Export diagram as PNG, width=50%
 * `Concern Usage`
 * `Stakeholder Membership`
 
+- In the `General View` diagram, Package graphical nodes can now be resized smaller than their default size.
 
 == Dependency update
 
